CB-5067 Create external database for DistroX clusters